# fiducia-mcp-server.rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/: README.md  dependabot.yml
.github/workflows/: README.md  ci.yml
docs/: nats-and-messaging.md  secrets-and-kv.md  web-stacks-and-testing.md
src/: README.md  cloudflare.rs  domains.rs  k8s.rs  lib.rs  main.rs  repo_map.rs  server.rs  telemetry.rs  upstream.rs
tests/: README.md  stdio_wire.rs
